<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kobaa TV</string>
    <string name="xtream_login">Xtream Codes Login</string>
    <string name="hint_host">Server URL (http://host:port)</string>
    <string name="hint_user">Username</string>
    <string name="hint_pass">Password</string>
    <string name="btn_login">Login</string>
    <string name="err_fill_all">Please fill all fields</string>
    <string name="err_login">Login failed: %1$s</string>
    <string name="channels_title">Channels</string>
    <string name="empty_channels">No channels found</string>
    <string name="quality_button">Quality</string>
    <string name="quality_title">Select quality</string>
    <string name="quality_auto">Auto</string>
    <string name="language_label">Language</string>
    <string name="lang_system">System default</string>
    <string name="lang_changed">Language updated</string>
    <string name="settings_title">Settings</string>
    <string name="status_online">Connected</string>
    <string name="status_offline">Disconnected</string>
    <string name="status_unknown">Checking…</string>
    <string name="accounts_title">Accounts</string>
    <string name="accounts_add">Add account</string>
    <string name="accounts_remove">Remove</string>
    <string name="accounts_active">ACTIVE</string>
    <string name="accounts_empty">No accounts yet</string>
    <string name="accounts_remove_confirm">Remove this account?</string>
    <string name="account_expires">Expires %1$s</string>
    <string name="account_expires_never">No expiry</string>
    <string name="account_connections">%1$d / %2$d connected</string>
    <string name="account_checking">Checking…</string>
    <string name="account_unreachable">Unreachable</string>
    <string name="fail_no_network">No internet connection</string>
    <string name="fail_all_accounts">All accounts failed to connect</string>
    <string name="fail_no_accounts">No account configured</string>
    <string name="fail_load_error">Could not load channels</string>
    <string name="switched_account">Switched to %1$s</string>
    <string name="home_subtitle">Product by Ahmad Al Kobaa</string>
    <string name="home_live">Live</string>
    <string name="home_filme">Filme</string>
    <string name="home_series">Series</string>
    <string name="home_favorites">Favorites</string>
    <string name="home_add_account">Add Account</string>
    <string name="home_manage_accounts">Manage Accounts</string>
    <string name="coming_soon">Coming soon</string>
    <string name="server_label">Server: %1$s</string>
</resources>
